api Error update

--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "hompage": "https://sckcs15.github.io/React-Movie-API"
+  "homepage": "https://sckcs15.github.io/React-Movie-API"
 }
